tests/cases/conformance/decorators/invalid/decoratorOnUsing.ts
// @target: esnext
declare function dec<T>(target: T): T;

@dec
using 1

@dec
using x
